--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .jumbotron.jumbotron-fluid(style='height:70vh;')
+  .jumbotron.jumbotron-fluid(style='height:auto;')
     .container
       br
       br
