--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -8,7 +8,7 @@ a:focus {
 
 .main,
 #main {
-    padding-bottom: 60px;
+    padding-bottom: 3.33%;
 }
 
 html {
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
+    margin-bottom: 3.33%;
     /* Margin bottom by footer height */
 }
 
@@ -27,6 +27,6 @@ body {
     width: 100%;
     height: 60px;
     /* Set the fixed height of the footer here */
-    line-height: 60px;
-    padding-left: 110px;
+    line-height: 30px;
+    padding-left: 1.5%;
 }
